// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateDashboard should render correctly in "debug" mode 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CreateDashboard
    debug={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "as": "div",
      "children": Array [
        <ForwardRef
          active={false}
          className="createNewDash"
          disabled={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Create new dashboard
        </ForwardRef>,
        <ForwardRef(render)
          onHide={[Function]}
          show={false}
          size="lg"
        >
          <ForwardRef
            closeButton={true}
            closeLabel="Close"
          >
            <ForwardRef>
              Create Dashboard
            </ForwardRef>
          </ForwardRef>
          <ForwardRef
            as="input"
            name="dashName"
            onChange={[Function]}
            placeholder="Enter the name for the new dashboard"
            style={
              Object {
                "marginLeft": "5%",
                "marginRight": "5%",
                "marginTop": 10,
                "width": "90%",
              }
            }
            type="text"
            value=""
          />
          <ForwardRef
            as="div"
            controlId="exampleForm.ControlTextarea1"
          >
            <ForwardRef
              as="textarea"
              name="dashDescription"
              onChange={[Function]}
              placeholder="Enter the description for the new dashboard"
              style={
                Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                }
              }
              value=""
            />
          </ForwardRef>
          <br />
          <ForwardRef>
            Click 'Save Changes' to create a new dashboard
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              active={false}
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Close
            </ForwardRef>
            <ForwardRef
              active={false}
              disabled={true}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              Save Changes
            </ForwardRef>
          </ForwardRef>
        </ForwardRef(render)>,
      ],
      "className": "App",
      "fluid": false,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "active": false,
          "children": "Create new dashboard",
          "className": "createNewDash",
          "disabled": false,
          "onClick": [Function],
          "type": "button",
          "variant": "primary",
        },
        "ref": null,
        "rendered": "Create new dashboard",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "active": false,
            "disabled": false,
            "type": "button",
            "variant": "primary",
          },
          "displayName": "Button",
          "render": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ForwardRef
              closeButton={true}
              closeLabel="Close"
            >
              <ForwardRef>
                Create Dashboard
              </ForwardRef>
            </ForwardRef>,
            <ForwardRef
              as="input"
              name="dashName"
              onChange={[Function]}
              placeholder="Enter the name for the new dashboard"
              style={
                Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                }
              }
              type="text"
              value=""
            />,
            <ForwardRef
              as="div"
              controlId="exampleForm.ControlTextarea1"
            >
              <ForwardRef
                as="textarea"
                name="dashDescription"
                onChange={[Function]}
                placeholder="Enter the description for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                value=""
              />
            </ForwardRef>,
            <br />,
            <ForwardRef>
              Click 'Save Changes' to create a new dashboard
            </ForwardRef>,
            <ForwardRef>
              <ForwardRef
                active={false}
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Close
              </ForwardRef>
              <ForwardRef
                active={false}
                disabled={true}
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                Save Changes
              </ForwardRef>
            </ForwardRef>,
          ],
          "onHide": [Function],
          "show": false,
          "size": "lg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <ForwardRef>
                Create Dashboard
              </ForwardRef>,
              "closeButton": true,
              "closeLabel": "Close",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Create Dashboard",
              },
              "ref": null,
              "rendered": "Create Dashboard",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalTitle",
                "render": [Function],
              },
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "closeButton": false,
                "closeLabel": "Close",
              },
              "displayName": "ModalHeader",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "input",
              "name": "dashName",
              "onChange": [Function],
              "placeholder": "Enter the name for the new dashboard",
              "style": Object {
                "marginLeft": "5%",
                "marginRight": "5%",
                "marginTop": 10,
                "width": "90%",
              },
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "Feedback": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "as": "div",
                  "type": "valid",
                },
                "displayName": "Feedback",
                "propTypes": Object {
                  "as": [Function],
                  "type": [Function],
                },
                "render": [Function],
              },
              "defaultProps": Object {
                "as": "input",
              },
              "displayName": "FormControl",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "div",
              "children": <ForwardRef
                as="textarea"
                name="dashDescription"
                onChange={[Function]}
                placeholder="Enter the description for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                value=""
              />,
              "controlId": "exampleForm.ControlTextarea1",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "textarea",
                "name": "dashDescription",
                "onChange": [Function],
                "placeholder": "Enter the description for the new dashboard",
                "style": Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                },
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "Feedback": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "as": "div",
                    "type": "valid",
                  },
                  "displayName": "Feedback",
                  "propTypes": Object {
                    "as": [Function],
                    "type": [Function],
                  },
                  "render": [Function],
                },
                "defaultProps": Object {
                  "as": "input",
                },
                "displayName": "FormControl",
                "render": [Function],
              },
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "as": "div",
              },
              "displayName": "FormGroup",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Click 'Save Changes' to create a new dashboard",
            },
            "ref": null,
            "rendered": "Click 'Save Changes' to create a new dashboard",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalBody",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ForwardRef
                  active={false}
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Close
                </ForwardRef>,
                <ForwardRef
                  active={false}
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                  variant="primary"
                >
                  Save Changes
                </ForwardRef>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Close",
                  "disabled": false,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "secondary",
                },
                "ref": null,
                "rendered": "Close",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Save Changes",
                  "disabled": true,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": "Save Changes",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalFooter",
              "render": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "BACKDROP_TRANSITION_DURATION": 150,
          "Body": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalBody",
            "render": [Function],
          },
          "Dialog": Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ModalDialog",
            "render": [Function],
          },
          "Footer": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalFooter",
            "render": [Function],
          },
          "Header": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "closeButton": false,
              "closeLabel": "Close",
            },
            "displayName": "ModalHeader",
            "render": [Function],
          },
          "TRANSITION_DURATION": 300,
          "Title": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalTitle",
            "render": [Function],
          },
          "defaultProps": undefined,
          "displayName": "Bootstrap(Modal)",
          "propTypes": undefined,
          "render": [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "as": "div",
        "fluid": false,
      },
      "displayName": "Container",
      "render": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "as": "div",
        "children": Array [
          <ForwardRef
            active={false}
            className="createNewDash"
            disabled={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            Create new dashboard
          </ForwardRef>,
          <ForwardRef(render)
            onHide={[Function]}
            show={false}
            size="lg"
          >
            <ForwardRef
              closeButton={true}
              closeLabel="Close"
            >
              <ForwardRef>
                Create Dashboard
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              as="input"
              name="dashName"
              onChange={[Function]}
              placeholder="Enter the name for the new dashboard"
              style={
                Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                }
              }
              type="text"
              value=""
            />
            <ForwardRef
              as="div"
              controlId="exampleForm.ControlTextarea1"
            >
              <ForwardRef
                as="textarea"
                name="dashDescription"
                onChange={[Function]}
                placeholder="Enter the description for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                value=""
              />
            </ForwardRef>
            <br />
            <ForwardRef>
              Click 'Save Changes' to create a new dashboard
            </ForwardRef>
            <ForwardRef>
              <ForwardRef
                active={false}
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Close
              </ForwardRef>
              <ForwardRef
                active={false}
                disabled={true}
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                Save Changes
              </ForwardRef>
            </ForwardRef>
          </ForwardRef(render)>,
        ],
        "className": "App",
        "fluid": false,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "active": false,
            "children": "Create new dashboard",
            "className": "createNewDash",
            "disabled": false,
            "onClick": [Function],
            "type": "button",
            "variant": "primary",
          },
          "ref": null,
          "rendered": "Create new dashboard",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "active": false,
              "disabled": false,
              "type": "button",
              "variant": "primary",
            },
            "displayName": "Button",
            "render": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ForwardRef
                closeButton={true}
                closeLabel="Close"
              >
                <ForwardRef>
                  Create Dashboard
                </ForwardRef>
              </ForwardRef>,
              <ForwardRef
                as="input"
                name="dashName"
                onChange={[Function]}
                placeholder="Enter the name for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                type="text"
                value=""
              />,
              <ForwardRef
                as="div"
                controlId="exampleForm.ControlTextarea1"
              >
                <ForwardRef
                  as="textarea"
                  name="dashDescription"
                  onChange={[Function]}
                  placeholder="Enter the description for the new dashboard"
                  style={
                    Object {
                      "marginLeft": "5%",
                      "marginRight": "5%",
                      "marginTop": 10,
                      "width": "90%",
                    }
                  }
                  value=""
                />
              </ForwardRef>,
              <br />,
              <ForwardRef>
                Click 'Save Changes' to create a new dashboard
              </ForwardRef>,
              <ForwardRef>
                <ForwardRef
                  active={false}
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Close
                </ForwardRef>
                <ForwardRef
                  active={false}
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                  variant="primary"
                >
                  Save Changes
                </ForwardRef>
              </ForwardRef>,
            ],
            "onHide": [Function],
            "show": false,
            "size": "lg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <ForwardRef>
                  Create Dashboard
                </ForwardRef>,
                "closeButton": true,
                "closeLabel": "Close",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Create Dashboard",
                },
                "ref": null,
                "rendered": "Create Dashboard",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": undefined,
                  "displayName": "ModalTitle",
                  "render": [Function],
                },
              },
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "closeButton": false,
                  "closeLabel": "Close",
                },
                "displayName": "ModalHeader",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "input",
                "name": "dashName",
                "onChange": [Function],
                "placeholder": "Enter the name for the new dashboard",
                "style": Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                },
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "Feedback": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "as": "div",
                    "type": "valid",
                  },
                  "displayName": "Feedback",
                  "propTypes": Object {
                    "as": [Function],
                    "type": [Function],
                  },
                  "render": [Function],
                },
                "defaultProps": Object {
                  "as": "input",
                },
                "displayName": "FormControl",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "div",
                "children": <ForwardRef
                  as="textarea"
                  name="dashDescription"
                  onChange={[Function]}
                  placeholder="Enter the description for the new dashboard"
                  style={
                    Object {
                      "marginLeft": "5%",
                      "marginRight": "5%",
                      "marginTop": 10,
                      "width": "90%",
                    }
                  }
                  value=""
                />,
                "controlId": "exampleForm.ControlTextarea1",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "as": "textarea",
                  "name": "dashDescription",
                  "onChange": [Function],
                  "placeholder": "Enter the description for the new dashboard",
                  "style": Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  },
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "Feedback": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "as": "div",
                      "type": "valid",
                    },
                    "displayName": "Feedback",
                    "propTypes": Object {
                      "as": [Function],
                      "type": [Function],
                    },
                    "render": [Function],
                  },
                  "defaultProps": Object {
                    "as": "input",
                  },
                  "displayName": "FormControl",
                  "render": [Function],
                },
              },
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "as": "div",
                },
                "displayName": "FormGroup",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Click 'Save Changes' to create a new dashboard",
              },
              "ref": null,
              "rendered": "Click 'Save Changes' to create a new dashboard",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalBody",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <ForwardRef
                    active={false}
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                    variant="secondary"
                  >
                    Close
                  </ForwardRef>,
                  <ForwardRef
                    active={false}
                    disabled={true}
                    onClick={[Function]}
                    type="button"
                    variant="primary"
                  >
                    Save Changes
                  </ForwardRef>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": false,
                    "children": "Close",
                    "disabled": false,
                    "onClick": [Function],
                    "type": "button",
                    "variant": "secondary",
                  },
                  "ref": null,
                  "rendered": "Close",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "active": false,
                      "disabled": false,
                      "type": "button",
                      "variant": "primary",
                    },
                    "displayName": "Button",
                    "render": [Function],
                  },
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": false,
                    "children": "Save Changes",
                    "disabled": true,
                    "onClick": [Function],
                    "type": "button",
                    "variant": "primary",
                  },
                  "ref": null,
                  "rendered": "Save Changes",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "active": false,
                      "disabled": false,
                      "type": "button",
                      "variant": "primary",
                    },
                    "displayName": "Button",
                    "render": [Function],
                  },
                },
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalFooter",
                "render": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "BACKDROP_TRANSITION_DURATION": 150,
            "Body": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalBody",
              "render": [Function],
            },
            "Dialog": Object {
              "$$typeof": Symbol(react.forward_ref),
              "displayName": "ModalDialog",
              "render": [Function],
            },
            "Footer": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalFooter",
              "render": [Function],
            },
            "Header": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "closeButton": false,
                "closeLabel": "Close",
              },
              "displayName": "ModalHeader",
              "render": [Function],
            },
            "TRANSITION_DURATION": 300,
            "Title": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalTitle",
              "render": [Function],
            },
            "defaultProps": undefined,
            "displayName": "Bootstrap(Modal)",
            "propTypes": undefined,
            "render": [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": Object {
          "as": "div",
          "fluid": false,
        },
        "displayName": "Container",
        "render": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`CreateDashboard should render correctly with no props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CreateDashboard />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "as": "div",
      "children": Array [
        <ForwardRef
          active={false}
          className="createNewDash"
          disabled={false}
          onClick={[Function]}
          type="button"
          variant="primary"
        >
          Create new dashboard
        </ForwardRef>,
        <ForwardRef(render)
          onHide={[Function]}
          show={false}
          size="lg"
        >
          <ForwardRef
            closeButton={true}
            closeLabel="Close"
          >
            <ForwardRef>
              Create Dashboard
            </ForwardRef>
          </ForwardRef>
          <ForwardRef
            as="input"
            name="dashName"
            onChange={[Function]}
            placeholder="Enter the name for the new dashboard"
            style={
              Object {
                "marginLeft": "5%",
                "marginRight": "5%",
                "marginTop": 10,
                "width": "90%",
              }
            }
            type="text"
            value=""
          />
          <ForwardRef
            as="div"
            controlId="exampleForm.ControlTextarea1"
          >
            <ForwardRef
              as="textarea"
              name="dashDescription"
              onChange={[Function]}
              placeholder="Enter the description for the new dashboard"
              style={
                Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                }
              }
              value=""
            />
          </ForwardRef>
          <br />
          <ForwardRef>
            Click 'Save Changes' to create a new dashboard
          </ForwardRef>
          <ForwardRef>
            <ForwardRef
              active={false}
              disabled={false}
              onClick={[Function]}
              type="button"
              variant="secondary"
            >
              Close
            </ForwardRef>
            <ForwardRef
              active={false}
              disabled={true}
              onClick={[Function]}
              type="button"
              variant="primary"
            >
              Save Changes
            </ForwardRef>
          </ForwardRef>
        </ForwardRef(render)>,
      ],
      "className": "App",
      "fluid": false,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "active": false,
          "children": "Create new dashboard",
          "className": "createNewDash",
          "disabled": false,
          "onClick": [Function],
          "type": "button",
          "variant": "primary",
        },
        "ref": null,
        "rendered": "Create new dashboard",
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "defaultProps": Object {
            "active": false,
            "disabled": false,
            "type": "button",
            "variant": "primary",
          },
          "displayName": "Button",
          "render": [Function],
        },
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <ForwardRef
              closeButton={true}
              closeLabel="Close"
            >
              <ForwardRef>
                Create Dashboard
              </ForwardRef>
            </ForwardRef>,
            <ForwardRef
              as="input"
              name="dashName"
              onChange={[Function]}
              placeholder="Enter the name for the new dashboard"
              style={
                Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                }
              }
              type="text"
              value=""
            />,
            <ForwardRef
              as="div"
              controlId="exampleForm.ControlTextarea1"
            >
              <ForwardRef
                as="textarea"
                name="dashDescription"
                onChange={[Function]}
                placeholder="Enter the description for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                value=""
              />
            </ForwardRef>,
            <br />,
            <ForwardRef>
              Click 'Save Changes' to create a new dashboard
            </ForwardRef>,
            <ForwardRef>
              <ForwardRef
                active={false}
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Close
              </ForwardRef>
              <ForwardRef
                active={false}
                disabled={true}
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                Save Changes
              </ForwardRef>
            </ForwardRef>,
          ],
          "onHide": [Function],
          "show": false,
          "size": "lg",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <ForwardRef>
                Create Dashboard
              </ForwardRef>,
              "closeButton": true,
              "closeLabel": "Close",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Create Dashboard",
              },
              "ref": null,
              "rendered": "Create Dashboard",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalTitle",
                "render": [Function],
              },
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "closeButton": false,
                "closeLabel": "Close",
              },
              "displayName": "ModalHeader",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "input",
              "name": "dashName",
              "onChange": [Function],
              "placeholder": "Enter the name for the new dashboard",
              "style": Object {
                "marginLeft": "5%",
                "marginRight": "5%",
                "marginTop": 10,
                "width": "90%",
              },
              "type": "text",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "Feedback": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "as": "div",
                  "type": "valid",
                },
                "displayName": "Feedback",
                "propTypes": Object {
                  "as": [Function],
                  "type": [Function],
                },
                "render": [Function],
              },
              "defaultProps": Object {
                "as": "input",
              },
              "displayName": "FormControl",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "as": "div",
              "children": <ForwardRef
                as="textarea"
                name="dashDescription"
                onChange={[Function]}
                placeholder="Enter the description for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                value=""
              />,
              "controlId": "exampleForm.ControlTextarea1",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "textarea",
                "name": "dashDescription",
                "onChange": [Function],
                "placeholder": "Enter the description for the new dashboard",
                "style": Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                },
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "Feedback": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "as": "div",
                    "type": "valid",
                  },
                  "displayName": "Feedback",
                  "propTypes": Object {
                    "as": [Function],
                    "type": [Function],
                  },
                  "render": [Function],
                },
                "defaultProps": Object {
                  "as": "input",
                },
                "displayName": "FormControl",
                "render": [Function],
              },
            },
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "as": "div",
              },
              "displayName": "FormGroup",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": "br",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Click 'Save Changes' to create a new dashboard",
            },
            "ref": null,
            "rendered": "Click 'Save Changes' to create a new dashboard",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalBody",
              "render": [Function],
            },
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                <ForwardRef
                  active={false}
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Close
                </ForwardRef>,
                <ForwardRef
                  active={false}
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                  variant="primary"
                >
                  Save Changes
                </ForwardRef>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Close",
                  "disabled": false,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "secondary",
                },
                "ref": null,
                "rendered": "Close",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "active": false,
                  "children": "Save Changes",
                  "disabled": true,
                  "onClick": [Function],
                  "type": "button",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": "Save Changes",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "active": false,
                    "disabled": false,
                    "type": "button",
                    "variant": "primary",
                  },
                  "displayName": "Button",
                  "render": [Function],
                },
              },
            ],
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalFooter",
              "render": [Function],
            },
          },
        ],
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "BACKDROP_TRANSITION_DURATION": 150,
          "Body": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalBody",
            "render": [Function],
          },
          "Dialog": Object {
            "$$typeof": Symbol(react.forward_ref),
            "displayName": "ModalDialog",
            "render": [Function],
          },
          "Footer": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalFooter",
            "render": [Function],
          },
          "Header": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "closeButton": false,
              "closeLabel": "Close",
            },
            "displayName": "ModalHeader",
            "render": [Function],
          },
          "TRANSITION_DURATION": 300,
          "Title": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": undefined,
            "displayName": "ModalTitle",
            "render": [Function],
          },
          "defaultProps": undefined,
          "displayName": "Bootstrap(Modal)",
          "propTypes": undefined,
          "render": [Function],
        },
      },
    ],
    "type": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "as": "div",
        "fluid": false,
      },
      "displayName": "Container",
      "render": [Function],
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "as": "div",
        "children": Array [
          <ForwardRef
            active={false}
            className="createNewDash"
            disabled={false}
            onClick={[Function]}
            type="button"
            variant="primary"
          >
            Create new dashboard
          </ForwardRef>,
          <ForwardRef(render)
            onHide={[Function]}
            show={false}
            size="lg"
          >
            <ForwardRef
              closeButton={true}
              closeLabel="Close"
            >
              <ForwardRef>
                Create Dashboard
              </ForwardRef>
            </ForwardRef>
            <ForwardRef
              as="input"
              name="dashName"
              onChange={[Function]}
              placeholder="Enter the name for the new dashboard"
              style={
                Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                }
              }
              type="text"
              value=""
            />
            <ForwardRef
              as="div"
              controlId="exampleForm.ControlTextarea1"
            >
              <ForwardRef
                as="textarea"
                name="dashDescription"
                onChange={[Function]}
                placeholder="Enter the description for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                value=""
              />
            </ForwardRef>
            <br />
            <ForwardRef>
              Click 'Save Changes' to create a new dashboard
            </ForwardRef>
            <ForwardRef>
              <ForwardRef
                active={false}
                disabled={false}
                onClick={[Function]}
                type="button"
                variant="secondary"
              >
                Close
              </ForwardRef>
              <ForwardRef
                active={false}
                disabled={true}
                onClick={[Function]}
                type="button"
                variant="primary"
              >
                Save Changes
              </ForwardRef>
            </ForwardRef>
          </ForwardRef(render)>,
        ],
        "className": "App",
        "fluid": false,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "active": false,
            "children": "Create new dashboard",
            "className": "createNewDash",
            "disabled": false,
            "onClick": [Function],
            "type": "button",
            "variant": "primary",
          },
          "ref": null,
          "rendered": "Create new dashboard",
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "defaultProps": Object {
              "active": false,
              "disabled": false,
              "type": "button",
              "variant": "primary",
            },
            "displayName": "Button",
            "render": [Function],
          },
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <ForwardRef
                closeButton={true}
                closeLabel="Close"
              >
                <ForwardRef>
                  Create Dashboard
                </ForwardRef>
              </ForwardRef>,
              <ForwardRef
                as="input"
                name="dashName"
                onChange={[Function]}
                placeholder="Enter the name for the new dashboard"
                style={
                  Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  }
                }
                type="text"
                value=""
              />,
              <ForwardRef
                as="div"
                controlId="exampleForm.ControlTextarea1"
              >
                <ForwardRef
                  as="textarea"
                  name="dashDescription"
                  onChange={[Function]}
                  placeholder="Enter the description for the new dashboard"
                  style={
                    Object {
                      "marginLeft": "5%",
                      "marginRight": "5%",
                      "marginTop": 10,
                      "width": "90%",
                    }
                  }
                  value=""
                />
              </ForwardRef>,
              <br />,
              <ForwardRef>
                Click 'Save Changes' to create a new dashboard
              </ForwardRef>,
              <ForwardRef>
                <ForwardRef
                  active={false}
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                  variant="secondary"
                >
                  Close
                </ForwardRef>
                <ForwardRef
                  active={false}
                  disabled={true}
                  onClick={[Function]}
                  type="button"
                  variant="primary"
                >
                  Save Changes
                </ForwardRef>
              </ForwardRef>,
            ],
            "onHide": [Function],
            "show": false,
            "size": "lg",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <ForwardRef>
                  Create Dashboard
                </ForwardRef>,
                "closeButton": true,
                "closeLabel": "Close",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": "Create Dashboard",
                },
                "ref": null,
                "rendered": "Create Dashboard",
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": undefined,
                  "displayName": "ModalTitle",
                  "render": [Function],
                },
              },
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "closeButton": false,
                  "closeLabel": "Close",
                },
                "displayName": "ModalHeader",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "input",
                "name": "dashName",
                "onChange": [Function],
                "placeholder": "Enter the name for the new dashboard",
                "style": Object {
                  "marginLeft": "5%",
                  "marginRight": "5%",
                  "marginTop": 10,
                  "width": "90%",
                },
                "type": "text",
                "value": "",
              },
              "ref": null,
              "rendered": null,
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "Feedback": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "defaultProps": Object {
                    "as": "div",
                    "type": "valid",
                  },
                  "displayName": "Feedback",
                  "propTypes": Object {
                    "as": [Function],
                    "type": [Function],
                  },
                  "render": [Function],
                },
                "defaultProps": Object {
                  "as": "input",
                },
                "displayName": "FormControl",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "as": "div",
                "children": <ForwardRef
                  as="textarea"
                  name="dashDescription"
                  onChange={[Function]}
                  placeholder="Enter the description for the new dashboard"
                  style={
                    Object {
                      "marginLeft": "5%",
                      "marginRight": "5%",
                      "marginTop": 10,
                      "width": "90%",
                    }
                  }
                  value=""
                />,
                "controlId": "exampleForm.ControlTextarea1",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "as": "textarea",
                  "name": "dashDescription",
                  "onChange": [Function],
                  "placeholder": "Enter the description for the new dashboard",
                  "style": Object {
                    "marginLeft": "5%",
                    "marginRight": "5%",
                    "marginTop": 10,
                    "width": "90%",
                  },
                  "value": "",
                },
                "ref": null,
                "rendered": null,
                "type": Object {
                  "$$typeof": Symbol(react.forward_ref),
                  "Feedback": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "as": "div",
                      "type": "valid",
                    },
                    "displayName": "Feedback",
                    "propTypes": Object {
                      "as": [Function],
                      "type": [Function],
                    },
                    "render": [Function],
                  },
                  "defaultProps": Object {
                    "as": "input",
                  },
                  "displayName": "FormControl",
                  "render": [Function],
                },
              },
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": Object {
                  "as": "div",
                },
                "displayName": "FormGroup",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": "br",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": "Click 'Save Changes' to create a new dashboard",
              },
              "ref": null,
              "rendered": "Click 'Save Changes' to create a new dashboard",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalBody",
                "render": [Function],
              },
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": Array [
                  <ForwardRef
                    active={false}
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                    variant="secondary"
                  >
                    Close
                  </ForwardRef>,
                  <ForwardRef
                    active={false}
                    disabled={true}
                    onClick={[Function]}
                    type="button"
                    variant="primary"
                  >
                    Save Changes
                  </ForwardRef>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": false,
                    "children": "Close",
                    "disabled": false,
                    "onClick": [Function],
                    "type": "button",
                    "variant": "secondary",
                  },
                  "ref": null,
                  "rendered": "Close",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "active": false,
                      "disabled": false,
                      "type": "button",
                      "variant": "primary",
                    },
                    "displayName": "Button",
                    "render": [Function],
                  },
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "active": false,
                    "children": "Save Changes",
                    "disabled": true,
                    "onClick": [Function],
                    "type": "button",
                    "variant": "primary",
                  },
                  "ref": null,
                  "rendered": "Save Changes",
                  "type": Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "defaultProps": Object {
                      "active": false,
                      "disabled": false,
                      "type": "button",
                      "variant": "primary",
                    },
                    "displayName": "Button",
                    "render": [Function],
                  },
                },
              ],
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "defaultProps": undefined,
                "displayName": "ModalFooter",
                "render": [Function],
              },
            },
          ],
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "BACKDROP_TRANSITION_DURATION": 150,
            "Body": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalBody",
              "render": [Function],
            },
            "Dialog": Object {
              "$$typeof": Symbol(react.forward_ref),
              "displayName": "ModalDialog",
              "render": [Function],
            },
            "Footer": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalFooter",
              "render": [Function],
            },
            "Header": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": Object {
                "closeButton": false,
                "closeLabel": "Close",
              },
              "displayName": "ModalHeader",
              "render": [Function],
            },
            "TRANSITION_DURATION": 300,
            "Title": Object {
              "$$typeof": Symbol(react.forward_ref),
              "defaultProps": undefined,
              "displayName": "ModalTitle",
              "render": [Function],
            },
            "defaultProps": undefined,
            "displayName": "Bootstrap(Modal)",
            "propTypes": undefined,
            "render": [Function],
          },
        },
      ],
      "type": Object {
        "$$typeof": Symbol(react.forward_ref),
        "defaultProps": Object {
          "as": "div",
          "fluid": false,
        },
        "displayName": "Container",
        "render": [Function],
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
